--- a/src/my-app.html
+++ b/src/my-app.html
@@ -121,17 +121,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         '_routePageChanged(routeData.page)'
       ],
 
-      _routePageChanged: function(page) {
+      _routePageChanged(page) {
         this.page = page || 'view1';
       },
 
-      _pageChanged: function(page) {
+      _pageChanged(page) {
         // Load page import on demand. Show 404 page if fails
-        var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
+        const resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
         this.importHref(resolvedPageUrl, null, this._showPage404, true);
       },
 
-      _showPage404: function() {
+      _showPage404() {
         this.page = 'view404';
       }
     });
